# afpfs-ng

./: README.md
afpfs-ng/: AUTHORS  Bugs.txt  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
afpfs-ng/cmdline/: Makefile.am  Makefile.in  cmdline_afp.c  cmdline_testafp.c  getstatus.c
afpfs-ng/daemon/: Makefile  Makefile.am  Makefile.in  afpfs  client.c  commands.c  commands.h  daemon.c  daemon.h  daemon_client.c  daemon_client.h  daemon_fuse.c  extra.c  fuse_error.c  fuse_error.h  fuse_int.c  stateless.c
afpfs-ng/docs/: README  design.txt
afpfs-ng/fuse/: commands.c  daemon.c  extra.c  fuse_int.c  stateless.c
afpfs-ng/include/: Makefile.am  Makefile.in  afp.h  afp_protocol.h  afpfsd.h  afpsl.h  codepage.h  dsi.h  libafpclient.h  map_def.h  midlevel.h  uams_def.h  utils.h
afpfs-ng/lib/: Makefile.in  afp.c  client.c  connect.c  did.c  dsi.c  identify.c  loop.c  lowlevel.c  lowlevel.h  midlevel.c  proto_directory.c  proto_files.c  proto_fork.c  proto_replyblock.c  proto_server.c  proto_volume.c  resource.c  server.c  status.c  uams.c  utils.c
kioslave_afp/: AUTHORS  Doxyfile  afp.kdevelop  configure  configure.in  configure.in.in
kioslave_afp/doc/: Makefile.am  Makefile.in
kioslave_afp/doc/en/: Makefile.am  Makefile.in  index.docbook
kioslave_afp/po/: Makefile.in
kioslave_afp/src/: Bugs.txt  Makefile.am  Makefile.in  TODO  afp.lsm  afp.protocol  afploginwidgetbase.ui  afploginwidgetbase.ui.h  kafp.cpp  kafp.h
kioslave_afp/templates/: h
